# ColourConverter

./: CMakeLists.txt  README.md
src/: Interface.cpp  Interface.h  Main.cpp  Window.cpp  Window.h
